Bug 51813. The change in r1.194 made it so that we respect a XUL element's lazy state. Because of this, we no longer need to check for 'new' matches in InstantiationNode::Propogate() -- *all* matches should be returned. Re-constify methods that should be const, and add NS_CONST_CAST() to call out where we're doing naughty things. r=rjc